using nextjs14 for hosting on cpanel

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
   }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.ham-menu-active {
+  overflow: hidden;
+}
+
+.dark .ham-menu-active .mobile-navigation {
+  background-color: #333333;
+  color: #FFFFFF;
+}
+
+.light .ham-menu-active .mobile-navigation {
+  background-color: #FFFFFF;
+  color: #333333;
+}
+
+
+.ham-menu-active .mobile-navigation {
+  position: absolute;
+  top: 60px;
+  left: 0%;
+  width: 100%;
+  height: calc(100vh - 60px);
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  transition: all 0.2s ease-in-out;
+}
+
+.ham-menu-active .mobile-navigation a {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.activeLink {
+  color: red;
+}
+
+a:focus,
+button:focus {
+  outline: none;
+}
+
+.leaflet-container {
+  z-index: 0;
+  border-radius: 6px;
 }
